<resources>
    <string name="app_name">Hello</string>
    <string name="out">the result</string>
    <string name="btn1">convert to Fahrenheit</string>
    <string name="inp">Please input degree Celsius</string>
    <string name="btn_reset">reset</string>
    <string name="btn_1">+1 point</string>
    <string name="btn_2">+2 points</string>
    <string name="btn_3">+3 points</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="edit_hint">input the rmb that one unit can change</string>
    <string name="btn_changeR">Change Rate</string>
    <string name="menu_set_label">Setting</string>
    <string name="label_open_list">OpenList</string>
    <string name="rdo_home_label">Home</string>
    <string name="rdo_func_label">Func</string>
    <string name="rdo_setting_label">Setting</string>
</resources>
