<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelloActivity">


    <EditText
        android:id="@+id/inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:hint="@string/inp"
        android:inputType="number"
        android:maxLength="3"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1"
        android:textSize="25sp"
        android:onClick="onClick"
        />

    <TextView
        android:id="@+id/txtout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_marginBottom="20dp"
        android:text="@string/out" />



</LinearLayout>